bpo-35950: Raise OSError in io.BufferedReader.truncate()

The truncate() method of io.BufferedReader() should raise OSError
when it is called on a read-only io.BufferedReader() instance.